--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                 <p class="office">Office adress:</p>
                                 <p class="nameoffice">511 Warburton Ave</p>
                             </div>
-                            <form action="tel:+19146780003">
+                            <form action="tel:+19146780003 ">
                                 <button class="callus">Call us</button>
                             </form>
                         </div>
@@ -276,7 +276,7 @@
                                 <p class="office">Office adress:</p>
                                 <p class="nameoffice">14 WEST Noyes BLVD</p>
                             </div>
-                            <form action="tel:+13159080004">
+                            <form action='tel:+13159080004'>
                                 <button class="callus">Call us</button>
                             </form>
                         </div>
