--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                 <p class="office">Office adress:</p>
                                 <p class="nameoffice">14 WEST Noyes BLVD</p>
                             </div>
-                            <form action='tel:+13159080004'>
+                            <form href='tel:+13159080004'>
                                 <button class="callus">Call us</button>
                             </form>
                         </div>
