--- a/index.html
+++ b/index.html
@@ -276,9 +276,7 @@
                                 <p class="office">Office adress:</p>
                                 <p class="nameoffice">14 WEST Noyes BLVD</p>
                             </div>
-                            <form href='tel:+13159080004'>
-                                <button class="callus">Call us</button>
-                            </form>
+                            <a href="tel:+1 315 908 0004" class="callus">Call us</a>
                         </div>
                     </div>
                 </div>
